[tool.poetry]
name = "due-transformers"
version = "0.1.dev1"
description = ""
authors = ["Dario <dario.chi@inventati.org>"]

[tool.poetry.dependencies]
python = "^3.7"
due = {path = "../due-repo"}
transformers = "^2.9.1"
torch = "^1.5.0"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"
ipywidgets = "^7.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
